# ReaShader

./: .clang-format  .gitignore  .gitmodules  .version  CMakeLists.txt  LICENSE  README.md  ReaShader.sln  a.py  sln-make.inix
doc/: Development.md  cmake_doc_em.md  powershell_doc_em.md  vk_doc.md  vst_doc_em.md  vst_documentation_em.md
resource/: myplugineditor.rc  myplugineditor.uidesc  resource.h  win32resource.aps  win32resource.rc
resource/meshes/: reashader.mtl
scripts/win/: post-build.ps1  pre-link.ps1
source/: ReaShader.smproj  myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h
source/glad/: glx.c
source/main/: myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
source/others/: rsprocessor.cpp
source/others/mptorpdata/: mptorpdata.h
source/others/vk/: vktools.cpp  vktools.h
source/others/vktools/: vktcommandqueue.h  vktdescriptors.h  vktdevices.cpp  vktdevices.h  vktimages.cpp  vktimages.h  vktools.cpp  vktools.h  vktrendering.cpp  vktrendering.h
source/reashader/: rscontroller.cpp  rscontroller.h  rsparams.cpp  rsparams.h  rsprocessor.cpp  rsprocessor.h  rsrenderer.cpp  rsrenderer.h
source/reashader/rsparams/: rsparams.cpp  rsparams.h  serdes.cpp
source/reashader/rsui/: api.h  backend.cpp  backend.h  rseditor.cpp  rseditor.h
source/reashader/rsui/backend/: backend.cpp  backend.h  rsuiserver.cpp  wshandler.cpp
source/reashader/rsui/frontend/: api.js  client.js  rsui.css  rsui.html  rsui.js
source/reashader/rsui/frontend/scripts/: api.js  client.js  rsui.js  strings.js
source/reashader/rsui/frontend/styles/: _bars.scss  _button.scss  _checkbox.scss  _input-file.scss  _palette.scss  _radio-button.scss  _slider.scss  _textarea.scss  rsui.scss
source/reashader/rsui/vst/: rsuieditor.cpp  rsuieditor.h
source/reashader/tools/: compiler_codes.h  exceptions.h  flagoperators.h  fwd_decl.h  logging.cpp  logging.h  logs.cpp  mime_types.h  paths.cpp  paths.h  strings.h
source/reashader/vkt/: vktbuffers.cpp  vktbuffers.h  vktcommandpool.cpp  vktcommandpool.h  vktcommands.h  vktcommon.cpp  vktcommon.h  vktdescriptors.cpp  vktdescriptors.h  vktdevices.cpp  vktdevices.h  vktimages.cpp  vktimages.h  vktmesh.cpp  vktpipeline.h  vktqueue.cpp  vktqueue.h  vktrendering.h  vktrenderpass.cpp  vktsync.h  vkttextures.h  vktvertex.h
source/reashader/vktools/: vktbuffers.cpp  vktbuffers.h  vktcommandpool.cpp  vktcommandpool.h  vktcommandqueue.cpp  vktcommandqueue.h  vktcommands.h  vktcommon.cpp  vktcommon.h  vktdescriptors.cpp  vktdescriptors.h  vktdevices.cpp  vktdevices.h  vktimages.cpp  vktimages.h  vktmesh.cpp  vktools.h  vktpipeline.h  vktqueue.cpp  vktqueue.h  vktrendering.h  vktsync.h  vkttextures.h  vktvertex.h
source/shaders/: frag.glsl  frag.spv  pp_frag.glsl  pp_frag.spv  pp_vert.glsl  pp_vert.spv  vert.glsl  vert.spv
source/vst3/: myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h
test/: colors.mp4.reapeaks  test.mp4.reapeaks  test.rpp  test.rpp-bak
